<!-- res/layout/activity_sign_up.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/usernameEditTextSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordEditTextSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Re-enter password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signUpButtonSignUpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:background="#FF0000"
        android:textColor="#FFFFFF"/>

</LinearLayout>
